--- a/Home/templates/base.html
+++ b/Home/templates/base.html
@@ -23,7 +23,7 @@
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  About
+                  Services
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="#">Action</a></li>
@@ -33,7 +33,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-disabled="flase">Blog</a>
+                <a class="nav-link active" aria-disabled="flase" href="about">About</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
