--- a/Home/templates/index.html
+++ b/Home/templates/index.html
@@ -4,7 +4,7 @@
 {% block body %}
 
 <!-- Corousel section code start -->
-<div class="container my-4">
+<div class="container-fluid my-4 px-0">
     <div id="carouselExampleCaptions" class="carousel slide">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
