--- a/Home/templates/contact.html
+++ b/Home/templates/contact.html
@@ -2,4 +2,32 @@
 
 {% block title %}Contact{% endblock title %}
 
-{% block body %}This is my contact body {% endblock body %}
+{% block body %}
+<h2 class="my-2 text-center">Contact Us</h2>
+<!-- form section code start -->
+<div class="container">
+    <form method="POST" action="/contact">
+    {% csrf_token %}
+
+    <div class="form-floating mb-3">
+        <input type="name" class="form-control" id="floatingInputDisabled" name="name" placeholder="Enter your name here" required>
+        <label for="floatingInputDisabled">Name</label>
+    </div>
+    <div class="form-floating mb-3">
+        <input type="email" class="form-control" id="floatingInputDisabled" name="email" placeholder="Enter your email here" requried>
+        <label for="floatingInputDisabled">Email address</label>
+    </div>
+    <div class="form-floating mb-3">
+        <input type="number" class="form-control" id="floatingInputDisabled" name="phone" placeholder="Enter your number here" required>
+        <label for="floatingInputDisabled">Phone-Number</label>
+    </div>
+    <div class="form-floating mb-3">
+        <textarea class="form-control" name="comment" placeholder="Leave a comment here" id="floatingTextarea2Disabled" style="height: 100px"></textarea>
+        <label for="floatingTextarea2Disabled">Comments</label>
+    </div>
+    <button class="btn btn-primary" type="submit">Submit</button>
+</form>
+</div>
+
+<!-- form section code end -->
+{% endblock body %}
