contact database has been created for contact user data

--- a/Home/templates/contact.html
+++ b/Home/templates/contact.html
@@ -6,7 +6,7 @@
 <h2 class="my-2 text-center">Contact Us</h2>
 <!-- form section code start -->
 <div class="container">
-    <form method="POST" action="/contact">
+    <form method="post" action="/contact">
     {% csrf_token %}
 
     <div class="form-floating mb-3">
