--- a/Home/templates/contact.html
+++ b/Home/templates/contact.html
@@ -26,6 +26,15 @@
         <label for="floatingTextarea2Disabled">Comments</label>
     </div>
     <button class="btn btn-primary" type="submit">Submit</button>
+    {% if messages %}
+    {% for message in messages %}
+    <div class="alert alert-{{ message.tags}} alert-dismissible fade show my-3" role="alert">
+        {{message}}
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+    {% endfor %}
+    {% endif %}
+      
 </form>
 </div>
 
